[package]
name = "ethers_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.2", features = ["ws", "rustls"] }
tokio = { version = "1.23.0", features = ["full"] }
dotenv = "0.15.0"
eyre = "0.6.8"
url = "2.3.1"
serde = "1.0.152"
serde_json = "1.0.91"
async-trait = "0.1.63"
tiny-keccak = {version = "2.0.2", features = ["keccak"]}